--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,9 @@
     max-width: 850px;
     margin: 0 auto;
     padding: 80px 0;
+    background-color: aquamarine;
 }
 
 section {
-    padding: 50px 0;
+    padding: 70px 30px;
 }
